titulo y video modificaciones

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio | OlimpYA</title>
+    <title>Antigva</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -254,15 +254,17 @@
           ¡Cuéntame más!
         </h2>
 
-        <iframe
-          height="600"
-          src="https://www.youtube.com/embed/HKy1O2pOSqA?si=oGQoNjNbt9Xl_3Ur"
-          title="rca"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-          class="w-100"
-        ></iframe>
+        <div style="aspect-ratio: 16/9;">
+          <iframe
+            src="https://www.youtube.com/embed/HKy1O2pOSqA?si=oGQoNjNbt9Xl_3Ur"
+            title="rca"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+            height="600"
+            class="w-100 h-100"
+          ></iframe>
+        </div>
 
         <div class="text-center mt-5">
           <button
@@ -326,7 +328,9 @@
             placeholder="Código postal"
           />
 
-          <div class="d-flex justify-content-center align-item-center gap-3 mt-4">
+          <div
+            class="d-flex justify-content-center align-item-center gap-3 mt-4"
+          >
             <input type="checkbox" id="mayor" />
             <label for="mayor" class="c-gray">Soy mayor de 18 años</label>
           </div>
