--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="d-block">a formar parte de ella</span>
           </h1>
           <p class="header__text fw-light">
-            Hazte embajador de nuestra marca y descubre el apasiónate mundo del
+            Hazte embajador de nuestra marca y descubre el apasionante mundo del
             vino desde dentro
           </p>
         </div>
@@ -227,7 +227,7 @@
               <p class="fs-sm fw-bold line line--left">
                 A traves de nuestra Academy recibiras la asistencia que
                 necesites con nuestros programas de apoyo que te ayudaran a
-                hacer crecer tu red de Wine Lovers ¡y a que desarrolles tu
+                hacer crecer tu red de Wine Lovers y a que desarrolles tu
                 carrera como profesional de este apasionante mundo del vino
               </p>
             </div>
