some text changes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>
           Si quieres conocer el apasionante mundo del vino, deseas alcanzar tu
           libertad financiera y ser tu propio Jefe, convertirte en Ambassador de
-          nuestra marca puede ser la oportunidad que estabas buscando.
+          nuestra marca, puede ser la oportunidad que estabas buscando.
         </p>
 
         <p class="mt-5">
@@ -122,7 +122,7 @@
               <p class="pasos__text fw-medium fs-sm">
                 Comparte tu experiencia, haz que otras personas conozcan
                 nuestros vinos e ingresen como Wine Lovers a traves de tu
-                recomendación como Ambassador ¡y obtén ingresos adicionales
+                recomendación como Ambassador y ¡obtén ingresos adicionales
                 acordes a tu dedicación!
               </p>
             </div>
@@ -162,7 +162,7 @@
                 todas tus compras y de GASTOS DE ENVIO GRATIS para todos tus
                 envíos peninsulares. Y si resides en Baleares, Canarias, o
                 cualquier país de la UE, disfruta de una franquicia de portes
-                muy ajustada
+                muy ajustada.
               </p>
             </div>
           </div>
@@ -209,8 +209,8 @@
                   compras que realicen los Wine Lover de este. Estableciendo asi
                   un Red de Consumidores Asociados de hasta tres niveles que te
                   reportara ingresos de hasta un 35% del volumen de compras
-                  comisionable alcanzado. Mas PORTES GRATIS y un 10% de
-                  descuento en todas tus compras.
+                  comisionable alcanzado. Además obtén PORTES GRATIS y un 10% de
+                  descuento en todas tus compras
                 </p>
               </div>
             </div>
@@ -226,7 +226,7 @@
             <div class="ps-5 pe-sm-5 mt-5">
               <p class="fs-sm fw-bold line line--left">
                 A traves de nuestra Academy recibiras la asistencia que
-                necesites con nuestros programas de apoyo que te ayudaran a
+                necesites con nuestros programas de apoyo que te ayudarán a
                 hacer crecer tu red de Wine Lovers y a que desarrolles tu
                 carrera como profesional de este apasionante mundo del vino
               </p>
@@ -254,7 +254,7 @@
           ¡Cuéntame más!
         </h2>
 
-        <div style="aspect-ratio: 16/9;">
+        <div style="aspect-ratio: 16/9">
           <iframe
             src="https://www.youtube.com/embed/HKy1O2pOSqA?si=oGQoNjNbt9Xl_3Ur"
             title="rca"
